Update The Star Wars social network analysis.ipynb

--- a/The Star Wars social network analysis.ipynb
+++ b/The Star Wars social network analysis.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 07 - Social Network Analysis\n",
+    "# The Star Wars social network analysis\n",
+    "\n",
+    "courtesy of Pr. Alex Hanna\n",   
     "\n",
     "Social network analysis is a type of analysis which interprets, analyzes, and visualises *relational* data. Instead of beginning from the person or tweet as the unit of analysis, with social network analysis (or SNA) we begin from the relationship between the two.\n",
     "\n",
